[package]
name = "das_keyboard_github_service"
version = "0.1.0"
authors = ["Mathieu <MathieuKeller@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-service = "2.0.2"
futures = "0.3.28"
env_logger = "0.10.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
json = "0.12.4"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
openssl = { version = "0.10.51", features = ["vendored"] }

[dev-dependencies]
actix-rt = "2.8.0"
