[package]
name = "das_keyboard_github_service"
version = "0.1.0"
authors = ["Mathieu <MathieuKeller@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-service = "2.0.2"
futures = "0.3.29"
env_logger = "0.10.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
json = "0.12.4"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
openssl = { version = "0.10.61", features = ["vendored"] }

[dev-dependencies]
actix-rt = "2.9.0"
